--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
   <meta charset="utf-8/" />
   <title>Titre de la page</title>
-  <link 
-  rel="stylesheet" href="style.css"/>
-  <script src="script.js"> </script>
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-<meta name="msapplication-TileColor" content="#da532c">
+  <link rel="stylesheet" href="style.css" />
+  <script src="script.js"></script>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+  <meta name="msapplication-TileColor" content="#da532c" />
 </head>
 
 <body>
@@ -20,60 +19,53 @@
   <p>
     <strong>Recherche d'une alternance chef de projet marketing digital</strong>
   </p>
-    Rigoureux créatif et curieux. Actuellement en formation de chef de projet
-    digital, je suis a la recherche d'une alternance afin de poursuivre mon
-    cursus dans le Web Marketing
-  
+  Rigoureux créatif et curieux. Actuellement en formation de chef de projet
+  digital , je suis a la recherche d'une alternance afin de poursuivre mon
+  cursus dans le Web Marketing
+
   <h2>profil:</h2>
   <p>
-    19 ans<br />06.26.50.91.08<br />andrieuxnolan5@gmail.com<br />76320 Saint
-    Pierre Lès Elbeuf
+    19 ans<br />06.26.50.91.08<br /><a
+      href="mailto:nandrieux@normandiewebschool.fr"
+      >Email</a
+    ><br />76320 Saint Pierre Lès Elbeuf
   </p>
   <h2>Compétence :</h2>
 
-    <li>Adobe</li>
-    <li>Capcut</li>
-    <li>canva</li>
-    <li>Inshot</li>
-    <li>🇬🇧Anglais A2</li>
-    <li>🇪🇸Espagnol A2</li>
+  <li>Adobe</li>
+  <li>Capcut</li>
+  <li>canva</li>
+  <li>Inshot</li>
+  <li>🇬🇧Anglais A2</li>
+  <li>🇪🇸Espagnol A2</li>
 
-<h2>Intérêt :</h2>
+  <h2>Intérêt :</h2>
 
-    <li>🥋 Karaté (2ème Dan)</li>
-    <li>📸 Production Vidéo</li>
-    <li>💡 Créations</li>
-    <li>🎮Jeux Vidéo</li>
+  <li>🥋 Karaté (2ème Dan)</li>
+  <li>📸 Production Vidéo</li>
+  <li>💡 Créations</li>
+  <li>🎮Jeux Vidéo</li>
 
-<p><h2>Formation :</h2>
-      <li>Normandie Web School 2023-2026-Bachelor chef de projet digital
-    <li>
-        Web Marketing<br />
-    <li>
-          Fondamentaux du marketing<br />
-    <li>
-            Référence naturel<br />
-    <li>
-              Audit des sites<br />
-     <li>
-                E-Commerce<br />
-    <li>Emailing</li>
-    </p>
+  <h2>Formation :</h2>
+  <li>2023-2026-Bachelor chef de projet digital</li>
+  <li>Web Marketing<br /></li>
+  <li>Fondamentaux du marketing<br /></li>
+  <li>Référence naturel<br /></li>
+  <li>Audit des sites</li>
+  <li>E-Commerce</li>
+  <li>Emailing</li>
+
   <p>Icadémie 2023<br />Formation infographiste metteur en page</p>
   <p>
     Lycée Louis Modeste Leroy Evreux 2021-2023<br />formation secondaire sti2d
   </p>
   <h2>Expérience Professionelle :</h2>
-    Leroy Merlin Avril à Septembre 2023<br />Logistique mise en rayons et ventes
-    peinture
+  Leroy Merlin Avril à Septembre 2023<br />Logistique mise en rayons et ventes
+  peinture
   <p>Gravity Parc Des Défis<br />Animateur et encadrant pour enfants</p>
   <p>Imagin'actif Bois Guillaume 2020<br />stage observation 3ème</p>
   <h2>Divers :</h2>
-    <li>
-      Permis B + Véhicule<br />
-      <li>
-        PSC1<br />
-        <li>Diplome Animateur Fédéral de Karaté</li>
-      </li>
-    </li>
+  <li>Permis B + Véhicule</li>
+  <li>PSC1</li>
+  <li>Diplome Animateur Fédéral de Karaté</li>
 </body>
