--- a/index.html
+++ b/index.html
@@ -1,71 +1,83 @@
 <!DOCTYPE html>
-<html lang="fr"></html>
-<head>
-  <meta charset="utf-8/" />
-  <title>Titre de la page</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="script.js"></script>
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-  <link rel="manifest" href="/site.webmanifest" />
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
-  <meta name="msapplication-TileColor" content="#da532c" />
-</head>
+<html lang="fr">
+  <head>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Agbalumo&display=swap"
+      rel="stylesheet"
+    />
 
-<body>
-  <h1><strong>Andrieux Nolan</strong></h1>
-  <img src="https://fakeimg.pl/300/?text=Nolan" width="200" <br />
-  <p>
-    <strong>Recherche d'une alternance chef de projet marketing digital</strong>
-  </p>
-  Rigoureux créatif et curieux. Actuellement en formation de chef de projet
-  digital , je suis a la recherche d'une alternance afin de poursuivre mon
-  cursus dans le Web Marketing
+    <meta charset="utf-8/" />
+    <title>Titre de la page</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+  </head>
 
-  <h2>profil:</h2>
-  <p>
-    19 ans<br />06.26.50.91.08<br /><a
-      href="mailto:nandrieux@normandiewebschool.fr"
-      >Email</a
-    ><br />76320 Saint Pierre Lès Elbeuf
-  </p>
-  <h2>Compétence :</h2>
+  <body>
+    <h1><strong>Andrieux Nolan</strong></h1>
+    <img src="https://fakeimg.pl/300/?text=Nolan" width="200" />
+    <p>
+      <strong
+        >Recherche d'une alternance chef de projet marketing digital</strong
+      >
+    </p>
+    Rigoureux créatif et curieux. Actuellement en formation de chef de projet
+    digital , je suis a la recherche d'une alternance afin de poursuivre mon
+    cursus dans le Web Marketing
 
-  <li>Adobe</li>
-  <li>Capcut</li>
-  <li>canva</li>
-  <li>Inshot</li>
-  <li>🇬🇧Anglais A2</li>
-  <li>🇪🇸Espagnol A2</li>
+    <h2>profil:</h2>
+    <p>
+      19 ans<br />06.26.50.91.08<br />
+      <a href="mailto:nandrieux@normandiewebschool.fr">Email</a><br />
+      <a href="https://www.linkedin.com/in/nolan-andrieux-na100504">Linkedin</a>
+      <br />76320 Saint Pierre Lès Elbeuf
+    </p>
+    <h2>Compétence :</h2>
+    <ul>
+      <li>Adobe</li>
+      <li>Capcut</li>
+      <li>canva</li>
+      <li>Inshot</li>
+      <li>🇬🇧Anglais A2</li>
+      <li>🇪🇸Espagnol A2</li>
+    </ul>
+    <h2>Intérêt :</h2>
+    <ul>
+      <li class="bg-yellow">🥋 Karaté (2ème Dan)</li>
+      <li class="bg-green">📸 Production Vidéo</li>
+      <li class="bg-blue">💡 Créations</li>
+      <li class="bg-purple">🎮Jeux Vidéo</li>
+    </ul>
 
-  <h2>Intérêt :</h2>
+    <h2>Formation :</h2>
+    <li><a href="https://normandiewebschool.fr"> chef de projet digital</a></li>
+    <li>Web Marketing<br /></li>
+    <li>Fondamentaux du marketing<br /></li>
+    <li>Référence naturel<br /></li>
+    <li>Audit des sites</li>
+    <li>E-Commerce</li>
+    <li>Emailing</li>
 
-  <li>🥋 Karaté (2ème Dan)</li>
-  <li>📸 Production Vidéo</li>
-  <li>💡 Créations</li>
-  <li>🎮Jeux Vidéo</li>
-
-  <h2>Formation :</h2>
-  <li>2023-2026-Bachelor chef de projet digital</li>
-  <li>Web Marketing<br /></li>
-  <li>Fondamentaux du marketing<br /></li>
-  <li>Référence naturel<br /></li>
-  <li>Audit des sites</li>
-  <li>E-Commerce</li>
-  <li>Emailing</li>
-
-  <p>Icadémie 2023<br />Formation infographiste metteur en page</p>
-  <p>
-    Lycée Louis Modeste Leroy Evreux 2021-2023<br />formation secondaire sti2d
-  </p>
-  <h2>Expérience Professionelle :</h2>
-  Leroy Merlin Avril à Septembre 2023<br />Logistique mise en rayons et ventes
-  peinture
-  <p>Gravity Parc Des Défis<br />Animateur et encadrant pour enfants</p>
-  <p>Imagin'actif Bois Guillaume 2020<br />stage observation 3ème</p>
-  <h2>Divers :</h2>
-  <li>Permis B + Véhicule</li>
-  <li>PSC1</li>
-  <li>Diplome Animateur Fédéral de Karaté</li>
-</body>
+    <p>Icadémie 2023<br />Formation infographiste metteur en page</p>
+    <p>
+      Lycée Louis Modeste Leroy Evreux 2021-2023<br />formation secondaire sti2d
+    </p>
+    <h2>Expérience Professionelle :</h2>
+    Leroy Merlin Avril à Septembre 2023<br />Logistique mise en rayons et ventes
+    peinture
+    <p>Gravity Parc Des Défis<br />Animateur et encadrant pour enfants</p>
+    <p>Imagin'actif Bois Guillaume 2020<br />stage observation 3ème</p>
+    <h2>Divers :</h2>
+    <li>Permis B + Véhicule</li>
+    <li>PSC1</li>
+    <li>Diplome Animateur Fédéral de Karaté</li>
+  </body>
+</html>
