--- a/index.html
+++ b/index.html
@@ -23,22 +23,25 @@
 
   <body>
     <h1><strong>Andrieux Nolan</strong></h1>
-    <img src="https://fakeimg.pl/300/?text=Nolan" width="200" />
+    <img src="P1038584.JPG" width="200" />
     <p>
       <strong
         >Recherche d'une alternance chef de projet marketing digital</strong
       >
     </p>
     Rigoureux créatif et curieux. Actuellement en formation de chef de projet
-    digital , je suis a la recherche d'une alternance afin de poursuivre mon
+    digital, je suis a la recherche d'une alternance afin de poursuivre mon
     cursus dans le Web Marketing
 
     <h2>profil:</h2>
     <p>
       19 ans<br />06.26.50.91.08<br />
       <a href="mailto:nandrieux@normandiewebschool.fr">Email</a><br />
-      <a href="https://www.linkedin.com/in/nolan-andrieux-na100504">Linkedin</a>
-      <br />76320 Saint Pierre Lès Elbeuf
+      <a href="https://www.linkedin.com/in/nolan-andrieux-na100504">Linkedin</a
+      ><br />
+      <a href="https://maps.app.goo.gl/gWb2aBwhYgKTfsXm8"
+        >Saint Pierre Lès Elbeuf</a
+      >
     </p>
     <h2>Compétence :</h2>
     <ul>
@@ -49,32 +52,57 @@
       <li>🇬🇧Anglais A2</li>
       <li>🇪🇸Espagnol A2</li>
     </ul>
+
     <h2>Intérêt :</h2>
     <ul>
-      <li class="bg-yellow">🥋 Karaté (2ème Dan)</li>
-      <li class="bg-green">📸 Production Vidéo</li>
-      <li class="bg-blue">💡 Créations</li>
-      <li class="bg-purple">🎮Jeux Vidéo</li>
+      <li class="bg-yellow">🥋 Karate (2eme Dan)</li>
+      <li class="bg-green">📸 Production Video</li>
+      <li class="bg-blue">💡 Creations</li>
+      <li class="bg-purple">🎮Jeux Video</li>
     </ul>
 
     <h2>Formation :</h2>
+    <ul></ul>
+
     <li><a href="https://normandiewebschool.fr"> chef de projet digital</a></li>
-    <li>Web Marketing<br /></li>
+    <li>
+      <a href="https://normandiewebschool.fr/cursus/bachelor-marketing-digital/"
+        >Marketing Digital</a
+      ><br />
+    </li>
     <li>Fondamentaux du marketing<br /></li>
     <li>Référence naturel<br /></li>
     <li>Audit des sites</li>
     <li>E-Commerce</li>
     <li>Emailing</li>
 
-    <p>Icadémie 2023<br />Formation infographiste metteur en page</p>
     <p>
-      Lycée Louis Modeste Leroy Evreux 2021-2023<br />formation secondaire sti2d
+      <li>
+        <a href="https://www.icademie.com/fr">Icademie 2023</a><br />Formation
+        infographiste metteur en page
+      </li>
     </p>
+    <p>
+      <li>
+        <a href="https://modeste-leroy.lycee.ac-normandie.fr"
+          >Lycee Louis Modeste Leroy Evreux 2021-2023</a
+        ><br />formation secondaire sti2d
+      </li>
+    </p>
+
     <h2>Expérience Professionelle :</h2>
-    Leroy Merlin Avril à Septembre 2023<br />Logistique mise en rayons et ventes
-    peinture
-    <p>Gravity Parc Des Défis<br />Animateur et encadrant pour enfants</p>
-    <p>Imagin'actif Bois Guillaume 2020<br />stage observation 3ème</p>
+    <a
+      href="https://www.leroymerlin.fr/magasins/tourville-la-riviere-rouen.html"
+      >Leroy Merlin Avril à Septembre 2023</a
+    ><br />Logistique mise en rayons et ventes peinture
+    <p>
+      <a href="https://www.gravity-parc-des-defis.fr">gravity-parc-des-defis</a
+      ><br />Animateur et encadrant pour enfants
+    </p>
+    <p>
+      <a href="https://www.imaginactif.fr">Imginactif Bois Guillaume 2020</a
+      ><br />stage observation 3ème
+    </p>
     <h2>Divers :</h2>
     <li>Permis B + Véhicule</li>
     <li>PSC1</li>
