--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
 
-    <meta charset="utf-8/" />
+    <meta charset="utf-8" />
     <title>Titre de la page</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
@@ -29,11 +29,13 @@
         >Recherche d'une alternance chef de projet marketing digital</strong
       >
     </p>
-    Rigoureux créatif et curieux. Actuellement en formation de chef de projet
-    digital, je suis a la recherche d'une alternance afin de poursuivre mon
-    cursus dans le Web Marketing
+    <p>
+      Rigoureux, créatif et curieux. Actuellement en formation de chef de projet
+      digital, je suis à la recherche d'une alternance afin de poursuivre mon
+      cursus dans le Web Marketing.
+    </p>
 
-    <h2>profil:</h2>
+    <h2>Profil:</h2>
     <p>
       19 ans<br />06.26.50.91.08<br />
       <a href="mailto:nandrieux@normandiewebschool.fr">Email</a><br />
@@ -43,69 +45,76 @@
         >Saint Pierre Lès Elbeuf</a
       >
     </p>
-    <h2>Compétence :</h2>
+
+    <h2>Compétences :</h2>
     <ul>
       <li>Adobe</li>
       <li>Capcut</li>
-      <li>canva</li>
+      <li>Canva</li>
       <li>Inshot</li>
       <li>🇬🇧Anglais A2</li>
       <li>🇪🇸Espagnol A2</li>
     </ul>
 
-    <h2>Intérêt :</h2>
+    <h2>Intérêts :</h2>
     <ul>
-      <li class="bg-yellow">🥋 Karate (2eme Dan)</li>
+      <li class="bg-yellow">🥋 Karaté (2eme Dan)</li>
       <li class="bg-green">📸 Production Video</li>
-      <li class="bg-blue">💡 Creations</li>
-      <li class="bg-purple">🎮Jeux Video</li>
+      <li class="bg-blue">💡 Créations</li>
+      <li class="bg-purple">🎮 Jeux Video</li>
     </ul>
 
     <h2>Formation :</h2>
-    <ul></ul>
+    <ul>
+      <li>
+        <a href="https://normandiewebschool.fr">Chef de projet digital</a>
+      </li>
+      <li>
+        <a
+          href="https://normandiewebschool.fr/cursus/bachelor-marketing-digital/"
+          >Marketing Digital</a
+        ><br />
+      </li>
+      <li>Fondamentaux du marketing</li>
+      <li>Référencement naturel</li>
+      <li>Audit des sites</li>
+      <li>E-Commerce</li>
+      <li>Emailing</li>
+    </ul>
 
-    <li><a href="https://normandiewebschool.fr"> chef de projet digital</a></li>
-    <li>
-      <a href="https://normandiewebschool.fr/cursus/bachelor-marketing-digital/"
-        >Marketing Digital</a
-      ><br />
-    </li>
-    <li>Fondamentaux du marketing<br /></li>
-    <li>Référence naturel<br /></li>
-    <li>Audit des sites</li>
-    <li>E-Commerce</li>
-    <li>Emailing</li>
-
-    <p>
+    <ul>
       <li>
         <a href="https://www.icademie.com/fr">Icademie 2023</a><br />Formation
         infographiste metteur en page
       </li>
-    </p>
-    <p>
       <li>
         <a href="https://modeste-leroy.lycee.ac-normandie.fr"
           >Lycee Louis Modeste Leroy Evreux 2021-2023</a
-        ><br />formation secondaire sti2d
+        ><br />Formation secondaire sti2d
       </li>
-    </p>
+    </ul>
 
-    <h2>Expérience Professionelle :</h2>
-    <a
-      href="https://www.leroymerlin.fr/magasins/tourville-la-riviere-rouen.html"
-      >Leroy Merlin Avril à Septembre 2023</a
-    ><br />Logistique mise en rayons et ventes peinture
+    <h2>Expérience Professionnelle :</h2>
+    <p>
+      <a
+        href="https://www.leroymerlin.fr/magasins/tourville-la-riviere-rouen.html"
+        >Leroy Merlin Avril à Septembre 2023</a
+      ><br />Logistique mise en rayons et ventes peinture
+    </p>
     <p>
       <a href="https://www.gravity-parc-des-defis.fr">gravity-parc-des-defis</a
       ><br />Animateur et encadrant pour enfants
     </p>
     <p>
-      <a href="https://www.imaginactif.fr">Imginactif Bois Guillaume 2020</a
-      ><br />stage observation 3ème
+      <a href="https://www.imaginactif.fr">Imaginactif Bois Guillaume 2020</a
+      ><br />Stage observation 3ème
     </p>
+
     <h2>Divers :</h2>
-    <li>Permis B + Véhicule</li>
-    <li>PSC1</li>
-    <li>Diplome Animateur Fédéral de Karaté</li>
+    <ul>
+      <li>Permis B + Véhicule</li>
+      <li>PSC1</li>
+      <li>Diplôme Animateur Fédéral de Karaté</li>
+    </ul>
   </body>
 </html>
